--- a/1_Projects/Api.Catalog/Catalog.Core/Catalog.Core.csproj
+++ b/1_Projects/Api.Catalog/Catalog.Core/Catalog.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.17.0" />
+  </ItemGroup>
+
 </Project>
