--- a/1_Projects/Api.Basket/Api.Basket/appsettings.Development.json
+++ b/1_Projects/Api.Basket/Api.Basket/appsettings.Development.json
@@ -1,6 +1,9 @@
 {
   "CacheSeetings": {
     "ConnectionString": "basketdb:6379"
+  },  
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:5003"
   },
   "Logging": {
     "LogLevel": {
